--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,19 @@ a:focus {
     box-shadow: none;
 }
 
+.pdf{
+    width: 100%;
+    aspect-ratio: 4 / 3;
+}
+
+.pdf,
+    html,
+    body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+
 
 /**********************************/
 /****** Layout with Sidebar *******/
