Background Gradient & Color Change

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
 /**********************************/
 /********** General CSS ***********/
 /**********************************/
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 body {
     color: #666666;
-    background: #F6D155;
+    background: linear-gradient(#162D54,#D3DEF2);
+    background-attachment: fixed;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -19,7 +25,7 @@ html {
 a:hover,
 a:active,
 a:focus {
-    color: #FF6F61;
+    color: #5E759D;
     outline: none;
     text-decoration: none;
 }
@@ -64,7 +70,6 @@ a:focus {
     width: 100%;
     padding: 15px;
     float: left;
-    background: #F6D155;
 }
 
 .wrapper .sidebar-header,
@@ -93,7 +98,7 @@ a:focus {
 }
 
 .navbar-expand-md .navbar-nav .nav-link i {
-    color: #FF6F61;
+    color: #5E759D;
     float: right;
     padding-top: 5px;
     transition: all .3s;
@@ -101,7 +106,7 @@ a:focus {
 
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link.active {
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .navbar-expand-md .navbar-nav .nav-link:hover i,
@@ -129,7 +134,7 @@ a:focus {
         content: "";
         width: 100%;
         height: 30px;
-        background: #F6D155;
+        
         z-index: 1;
     }
     
@@ -225,7 +230,7 @@ a:focus {
         text-align: center;
         font-size: 18px;
         color: #222222;
-        background: #FF6F61;
+        background: #5E759D;
     }
     
     .sidebar .sidebar-footer a:last-child {
@@ -233,7 +238,7 @@ a:focus {
     }
     
     .sidebar .sidebar-footer a:hover {
-        color: #FF6F61;
+        color: #5E759D;
         background: #ffffff;
     }
     
@@ -301,7 +306,7 @@ a:focus {
 }
 
 .back-to-top i:hover {
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .back-to-top {
@@ -335,7 +340,7 @@ a:focus {
 }
 
 .header p {
-    color: #FF6F61;
+    color: #5E759D;
     font-size: 22px;
     font-weight: 600;
     margin-bottom: 10px;
@@ -366,14 +371,14 @@ a:focus {
 
 .large-btn .content-inner {
     font-size: 0;
-    border-bottom: 30px solid #F6D155;
+    border-bottom: 30px;
 }
 
 .large-btn .btn {
     position: relative;
     width: 50%;
     padding: 15px 0;
-    color: #FF6F61;
+    color: #5E759D;
     font-size: 20px;
     background: #222222;
     border-radius: 0;
@@ -381,7 +386,7 @@ a:focus {
 
 .large-btn .btn:last-child {
     color: #222222;
-    background: #FF6F61;
+    background: #5E759D;
 }
 
 .large-btn .btn i {
@@ -430,7 +435,7 @@ a:focus {
     height: 3px;
     bottom: 0;
     left: 0;
-    background: #FF6F61;
+    background: #5E759D;
 }
 
 
@@ -441,7 +446,7 @@ a:focus {
     position: relative;
     padding: 60px 30px;
     background: #ffffff;
-    border-bottom: 30px solid #F6D155;
+    border-bottom: 30px;
 }
 
 
@@ -459,12 +464,12 @@ a:focus {
 .about .btn {
     border-radius: 0;
     color: #222222;
-    background: #FF6F61;
+    background: #5E759D;
     transition: all .3s;
 }
 
 .about .btn:hover {
-    color: #FF6F61;
+    color: #5E759D;
     background: #222222;
 }
 
@@ -489,14 +494,14 @@ a:focus {
 
 .about .progress {
     height: 5px;
-    border: 1px solid #FF6F61;
+    border: 1px solid #5E759D;
     border-radius: 0;
     background: #ffffff;
 }
 
 .about .progress .progress-bar {
     width: 1px;
-    background: #FF6F61;
+    background: #5E759D;
     border-radius: 0;
     transition: 1s;
 }
@@ -509,15 +514,15 @@ a:focus {
     position: relative;
     padding: 60px 30px;
     background: #ffffff;
-    border-bottom: 30px solid #F6D155;
+    border-bottom: 30px;
 }
 
 .education .edu-col {
     position: relative;
     width: 100%;
     padding: 20px 0 20px 20px;
-    border-left: 1px solid #FF6F61;
-    border-bottom: 1px solid #FF6F61;
+    border-left: 1px solid #5E759D;
+    border-bottom: 1px solid #5E759D;
 }
 
 .education .col-md-6:first-child .edu-col {
@@ -554,14 +559,14 @@ a:focus {
     content: "";
     width: 11px;
     height: 11px;
-    background: #FF6F61;
+    background: #5E759D;
     top: 5px;
     left: -26px;
     border-radius: 5px;
 }
 
 .education .edu-col span i {
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .education .edu-col h3 {
@@ -582,15 +587,15 @@ a:focus {
     position: relative;
     padding: 60px 30px;
     background: #ffffff;
-    border-bottom: 30px solid #F6D155;
+    border-bottom: 30px;
 }
 
 .experience .exp-col {
     position: relative;
     width: 100%;
     padding: 20px 0 20px 20px;
-    border-left: 1px solid #FF6F61;
-    border-bottom: 1px solid #FF6F61;
+    border-left: 1px solid #5E759D;
+    border-bottom: 1px solid #5E759D;
 }
 
 .experience .col-md-6:first-child .exp-col {
@@ -627,14 +632,14 @@ a:focus {
     content: "";
     width: 11px;
     height: 11px;
-    background: #FF6F61;
+    background: #5E759D;
     top: 5px;
     left: -26px;
     border-radius: 5px;
 }
 
 .experience .exp-col span i {
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .experience .exp-col h3 {
@@ -669,7 +674,7 @@ a:focus {
     position: relative;
     padding: 60px 30px 30px 30px;
     background: #ffffff;
-    border-bottom: 30px solid #F6D155;
+    border-bottom: 30px;
 }
 
 .service .srv-col {
@@ -680,7 +685,7 @@ a:focus {
 
 .service .srv-col i {
     font-size: 30px;
-    color: #FF6F61;
+    color: #5E759D;
     margin-bottom: 15px;
 }
 
@@ -716,7 +721,7 @@ a:focus {
     position: relative;
     padding: 60px 30px 30px 30px;
     background: #ffffff;
-    border-bottom: 30px solid #F6D155;
+    border-bottom: 30px;
 }
 
 .portfolio #portfolio-flters {
@@ -736,14 +741,14 @@ a:focus {
     font-size: 13px;
     line-height: 15px;
     text-transform: uppercase;
-    border: 1px solid #FF6F61;
+    border: 1px solid #5E759D;
     background: #ffffff;
     transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-    background: #FF6F61;
+    background: #5E759D;
     color: #222222;
 }
 
@@ -783,7 +788,7 @@ a:focus {
     text-align: center;
     width: 45px;
     height: 35px;
-    background: #FF6F61;
+    background: #5E759D;
     transition: 0.2s linear;
 }
 
@@ -801,7 +806,7 @@ a:focus {
 
 .portfolio .portfolio-item figure .link-preview:hover i,
 .portfolio .portfolio-item figure .link-details:hover i {
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .portfolio .portfolio-item figure .link-preview {
@@ -825,7 +830,7 @@ a:focus {
     color: #222222;
     font-size: 16px;
     font-weight: 600;
-    background: rgba(255, 111, 97, .5);
+    background: #5E759D;
     border-radius: 0;
 }
 
@@ -863,7 +868,7 @@ a:focus {
 .review {
     position: relative;
     background: #ffffff;
-    border-bottom: 30px solid #F6D155;
+    border-bottom: 30px;
 }
 
 .review .content-inner {
@@ -906,7 +911,7 @@ a:focus {
 }
 
 .review .review-text .ratting i {
-    color: #FF6F61;
+    color: #5E759D;
     font-size: 14px;
 }
 
@@ -925,7 +930,7 @@ a:focus {
     z-index: 1;
     opacity: 0;
     transition: .5s;
-    background: rgba(255, 111, 97, .7);
+    background: #5E759D;
 }
 
 .review-slider .slick-prev {
@@ -950,14 +955,14 @@ a:focus {
 .review-slider .slick-prev:focus,
 .review-slider .slick-next:hover,
 .review-slider .slick-next:focus {
-    background: rgba(0, 0, 0, .7);
+    background: #5E759D;
 }
 
 .review-slider .slick-prev:hover::before,
 .review-slider .slick-prev:focus::before,
 .review-slider .slick-next:hover::before,
 .review-slider .slick-next:focus::before {
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .review-slider .slick-prev::before,
@@ -986,7 +991,7 @@ a:focus {
 }
 
 .review-slider .slick-dots li.slick-active button:before {
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .review-slider.slick-slider {
@@ -1018,7 +1023,7 @@ a:focus {
 
 .contact .contact-info p i {
     width: 25px;
-    color: #FF6F61;
+    color: #5E759D;
 }
 
 .contact .contact-info p a {
@@ -1026,7 +1031,7 @@ a:focus {
 }
 
 .contact .contact-info p a:hover {
-    color: #FF6F61;
+    color: #5E759D;
     text-decoration: none;
 }
 
@@ -1039,7 +1044,7 @@ a:focus {
     height: 35px;
     padding: 5px 0;
     color: #222222;
-    background: #FF6F61;
+    background: #5E759D;
     border-radius: 0;
     margin-top: 15px;
     margin-right: 15px;
@@ -1051,7 +1056,7 @@ a:focus {
 }
 
 .contact .social a:hover {
-    color: #FF6F61;
+    color: #5E759D;
     background: #222222;
 }
 
@@ -1067,18 +1072,18 @@ a:focus {
 
 .contact .form .form-control:focus {
     box-shadow: none;
-    border-color: #FF6F61;
+    border-color: #5E759D;
 }
 
 .contact .form .btn {
     color: #222222;
-    background: #FF6F61;
+    background: #5E759D;
     border-radius: 0;
     transition: all .3s;
 }
 
 .contact .form .btn:hover {
-    color: #FF6F61;
+    color: #5E759D;
     background: #222222;
 }
 
@@ -1090,7 +1095,6 @@ a:focus {
     position: relative;
     width: 100%;
     padding: 30px 30px 0 30px;
-    background: #F6D155;
 }
 
 .footer .col-md-6:last-child {
@@ -1110,7 +1114,7 @@ a:focus {
 }
 
 .footer a {
-    color: #FF6F61;
+    color: #5E759D;
     font-weight: 600;
 }
 
