New Accent Color

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ html {
 a:hover,
 a:active,
 a:focus {
-    color: #5E759D;
+    color: #98AAC8;
     outline: none;
     text-decoration: none;
 }
@@ -98,7 +98,7 @@ a:focus {
 }
 
 .navbar-expand-md .navbar-nav .nav-link i {
-    color: #5E759D;
+    color: #98AAC8;
     float: right;
     padding-top: 5px;
     transition: all .3s;
@@ -106,7 +106,7 @@ a:focus {
 
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link.active {
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .navbar-expand-md .navbar-nav .nav-link:hover i,
@@ -230,7 +230,7 @@ a:focus {
         text-align: center;
         font-size: 18px;
         color: #222222;
-        background: #5E759D;
+        background: #98AAC8;
     }
     
     .sidebar .sidebar-footer a:last-child {
@@ -238,7 +238,7 @@ a:focus {
     }
     
     .sidebar .sidebar-footer a:hover {
-        color: #5E759D;
+        color: #98AAC8;
         background: #ffffff;
     }
     
@@ -306,7 +306,7 @@ a:focus {
 }
 
 .back-to-top i:hover {
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .back-to-top {
@@ -340,7 +340,7 @@ a:focus {
 }
 
 .header p {
-    color: #5E759D;
+    color: #98AAC8;
     font-size: 22px;
     font-weight: 600;
     margin-bottom: 10px;
@@ -378,7 +378,7 @@ a:focus {
     position: relative;
     width: 50%;
     padding: 15px 0;
-    color: #5E759D;
+    color: #98AAC8;
     font-size: 20px;
     background: #222222;
     border-radius: 0;
@@ -386,7 +386,7 @@ a:focus {
 
 .large-btn .btn:last-child {
     color: #222222;
-    background: #5E759D;
+    background: #98AAC8;
 }
 
 .large-btn .btn i {
@@ -435,7 +435,7 @@ a:focus {
     height: 3px;
     bottom: 0;
     left: 0;
-    background: #5E759D;
+    background: #98AAC8;
 }
 
 
@@ -464,12 +464,12 @@ a:focus {
 .about .btn {
     border-radius: 0;
     color: #222222;
-    background: #5E759D;
+    background: #98AAC8;
     transition: all .3s;
 }
 
 .about .btn:hover {
-    color: #5E759D;
+    color: #98AAC8;
     background: #222222;
 }
 
@@ -494,14 +494,14 @@ a:focus {
 
 .about .progress {
     height: 5px;
-    border: 1px solid #5E759D;
+    border: 1px solid #98AAC8;
     border-radius: 0;
     background: #ffffff;
 }
 
 .about .progress .progress-bar {
     width: 1px;
-    background: #5E759D;
+    background: #98AAC8;
     border-radius: 0;
     transition: 1s;
 }
@@ -521,8 +521,8 @@ a:focus {
     position: relative;
     width: 100%;
     padding: 20px 0 20px 20px;
-    border-left: 1px solid #5E759D;
-    border-bottom: 1px solid #5E759D;
+    border-left: 1px solid #98AAC8;
+    border-bottom: 1px solid #98AAC8;
 }
 
 .education .col-md-6:first-child .edu-col {
@@ -559,14 +559,14 @@ a:focus {
     content: "";
     width: 11px;
     height: 11px;
-    background: #5E759D;
+    background: #98AAC8;
     top: 5px;
     left: -26px;
     border-radius: 5px;
 }
 
 .education .edu-col span i {
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .education .edu-col h3 {
@@ -594,8 +594,8 @@ a:focus {
     position: relative;
     width: 100%;
     padding: 20px 0 20px 20px;
-    border-left: 1px solid #5E759D;
-    border-bottom: 1px solid #5E759D;
+    border-left: 1px solid #98AAC8;
+    border-bottom: 1px solid #98AAC8;
 }
 
 .experience .col-md-6:first-child .exp-col {
@@ -632,14 +632,14 @@ a:focus {
     content: "";
     width: 11px;
     height: 11px;
-    background: #5E759D;
+    background: #98AAC8;
     top: 5px;
     left: -26px;
     border-radius: 5px;
 }
 
 .experience .exp-col span i {
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .experience .exp-col h3 {
@@ -685,7 +685,7 @@ a:focus {
 
 .service .srv-col i {
     font-size: 30px;
-    color: #5E759D;
+    color: #98AAC8;
     margin-bottom: 15px;
 }
 
@@ -741,14 +741,14 @@ a:focus {
     font-size: 13px;
     line-height: 15px;
     text-transform: uppercase;
-    border: 1px solid #5E759D;
+    border: 1px solid #98AAC8;
     background: #ffffff;
     transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-    background: #5E759D;
+    background: #98AAC8;
     color: #222222;
 }
 
@@ -788,7 +788,7 @@ a:focus {
     text-align: center;
     width: 45px;
     height: 35px;
-    background: #5E759D;
+    background: #98AAC8;
     transition: 0.2s linear;
 }
 
@@ -806,7 +806,7 @@ a:focus {
 
 .portfolio .portfolio-item figure .link-preview:hover i,
 .portfolio .portfolio-item figure .link-details:hover i {
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .portfolio .portfolio-item figure .link-preview {
@@ -830,7 +830,7 @@ a:focus {
     color: #222222;
     font-size: 16px;
     font-weight: 600;
-    background: #5E759D;
+    background: #98AAC8;
     border-radius: 0;
 }
 
@@ -911,7 +911,7 @@ a:focus {
 }
 
 .review .review-text .ratting i {
-    color: #5E759D;
+    color: #98AAC8;
     font-size: 14px;
 }
 
@@ -930,7 +930,7 @@ a:focus {
     z-index: 1;
     opacity: 0;
     transition: .5s;
-    background: #5E759D;
+    background: #98AAC8;
 }
 
 .review-slider .slick-prev {
@@ -955,14 +955,14 @@ a:focus {
 .review-slider .slick-prev:focus,
 .review-slider .slick-next:hover,
 .review-slider .slick-next:focus {
-    background: #5E759D;
+    background: #98AAC8;
 }
 
 .review-slider .slick-prev:hover::before,
 .review-slider .slick-prev:focus::before,
 .review-slider .slick-next:hover::before,
 .review-slider .slick-next:focus::before {
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .review-slider .slick-prev::before,
@@ -991,7 +991,7 @@ a:focus {
 }
 
 .review-slider .slick-dots li.slick-active button:before {
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .review-slider.slick-slider {
@@ -1023,7 +1023,7 @@ a:focus {
 
 .contact .contact-info p i {
     width: 25px;
-    color: #5E759D;
+    color: #98AAC8;
 }
 
 .contact .contact-info p a {
@@ -1031,7 +1031,7 @@ a:focus {
 }
 
 .contact .contact-info p a:hover {
-    color: #5E759D;
+    color: #98AAC8;
     text-decoration: none;
 }
 
@@ -1044,7 +1044,7 @@ a:focus {
     height: 35px;
     padding: 5px 0;
     color: #222222;
-    background: #5E759D;
+    background: #98AAC8;
     border-radius: 0;
     margin-top: 15px;
     margin-right: 15px;
@@ -1056,7 +1056,7 @@ a:focus {
 }
 
 .contact .social a:hover {
-    color: #5E759D;
+    color: #98AAC8;
     background: #222222;
 }
 
@@ -1072,18 +1072,18 @@ a:focus {
 
 .contact .form .form-control:focus {
     box-shadow: none;
-    border-color: #5E759D;
+    border-color: #98AAC8;
 }
 
 .contact .form .btn {
     color: #222222;
-    background: #5E759D;
+    background: #98AAC8;
     border-radius: 0;
     transition: all .3s;
 }
 
 .contact .form .btn:hover {
-    color: #5E759D;
+    color: #98AAC8;
     background: #222222;
 }
 
@@ -1114,7 +1114,7 @@ a:focus {
 }
 
 .footer a {
-    color: #5E759D;
+    color: #98AAC8;
     font-weight: 600;
 }
 
