--- a/css/style.css
+++ b/css/style.css
@@ -1121,4 +1121,21 @@ a:focus {
 .footer a:hover {
     color: #222222;
 }
-
+.mapbox {
+    position: relative;
+    height: 250px;
+    width: 100%;
+    border-radius: 16px;
+    margin-bottom: 30px;
+    border: 1px solid var(--jet);
+    overflow: hidden;
+  }
+  
+  .mapbox figure { height: 100%; }
+  
+  .mapbox iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+    filter: sepia(1) hue-rotate(180deg) brightness(0.8) contrast(1.2);
+  }
